@@ -3,9 +3,11 @@ This file contains a log of major changes in dehydrated
 
 ## [x.x.x] - xxxx-xx-xx
 ## Changed
+- dehydrated now asks you to read and accept the CAs terms of service before creating an account
 - Skip challenges for already validated domains
 - Removed need for some special commands (BusyBox compatibility)
 - Exported a few more variables for use in hook-scripts
+- fullchain.pem now actually contains the full chain instead of just the certificate with an intermediate cert
 
 ## Added
 - Added private-key rollover functionality
@@ -13,6 +15,7 @@ This file contains a log of major changes in dehydrated
 - Added `invalid_challenge` hook
 - Added `request_failure` hook
 - Added `exit_hook` hook
+- Added standalone `register` command
 
 ## [0.3.1] - 2016-09-13
 ## Changed
